Refactor: Simplify null checks and enhance item handling in CustomModelDataMapper, AbstractShopCategoryGui, and MannequinManager; update version to 2.2